hphp/hack/test/typecheck/must_be_arraykey.php.exp
File "must_be_arraykey.php", line 5, characters 14-22:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 37, characters 51-51:
  `T` is a constrained type parameter
  File "hackarray.hhi", line 37, characters 56-63:
  This type constraint is violated
  File "hackarray.hhi", line 37, characters 56-63:
  Expected `arraykey`
  File "must_be_arraykey.php", line 5, characters 21-21:
  But got `I`
