hphp/hack/test/typecheck/must_be_arraykey.php
<?hh

interface I {}

function foo(keyset<I> $k): void {}
